--- a/problems/Cargo.toml
+++ b/problems/Cargo.toml
@@ -11,3 +11,6 @@ clap = { version = "4.0.29", features = ["derive"] }
 color-eyre = "0.6.2"
 humantime = "2.1.0"
 itertools = "0.10.5"
+
+[dev-dependencies]
+pretty_assertions = "1.3.0"
